# src/context/domain/model/base.js
@@ -1,0 +1,16 @@
+const mongoose = require('mongoose');
+
+const Schema = mongoose.Schema;
+
+const BaseSchema = new Schema({
+  propertyA: {
+    type: String,
+    required: true,
+  },
+  propertyB: {
+    type: Number,
+    required: true,
+  },
+});
+
+module.exports = mongoose.model('baseModel', BaseSchema);
